feat: config using local requirements

--- a/sahi_data.yaml
+++ b/sahi_data.yaml
@@ -1,8 +1,81 @@
-path: ./YOLO8_SAHI/yolo_dataset/ # dataset root dir
+path: /content/Aksara Jawa.v19/test/ # dataset root dir
 
 train: images # train images (relative to 'path') 128 images
 val: images # val images (relative to 'path') 128 images
 
 # Classes
 names:
-  0: people
+  0: "1 Ha"
+  1: "10 La"
+  2: "11 Pa"
+  3: "12 Dha"
+  4: "13 Ja"
+  5: "14 Ya"
+  6: "15 Nya"
+  7: "16 Ma"
+  8: "17 Ga"
+  9: "18 Ba"
+  10: "19 Tha"
+  11: "2 Na"
+  12: "20 Nga"
+  13: "21 Pasangan Ha"
+  14: "22 Pasangan Na"
+  15: "23 Pasangan Ca"
+  16: "24 Pasangan Ra"
+  17: "25 Pasangan Ka"
+  18: "26 Pasangan Da"
+  19: "27 Pasangan Ta"
+  20: "28 Pasangan Sa"
+  21: "29 Pasangan Wa"
+  22: "3 Ca"
+  23: "30 Pasangan La"
+  24: "31 Pasangan Pa"
+  25: "32 Pasangan Dha"
+  26: "33 Pasangan Ja"
+  27: "34 Pasangan Ya"
+  28: "35 Pasangan Nya"
+  29: "36 Pasangan Ma"
+  30: "37 Pasangan Ga"
+  31: "38 Pasangan Ba"
+  32: "39 Pasangan Tha"
+  33: "4 Ra"
+  34: "40 Pasangan Nga"
+  35: "41 Wulu"
+  36: "42 Pepet"
+  37: "43 Suku"
+  38: "44 Taling"
+  39: "45 Taling Tarung"
+  40: "46 Cecak"
+  41: "47 Layar"
+  42: "48 Pangkon"
+  43: "49 Pengkol"
+  44: "5 Ka"
+  45: "50 Wignyan"
+  46: "51 Cakra"
+  47: "52 Pa Cerek"
+  48: "53 Nga Lelet"
+  49: "54 Pada Lingsa"
+  50: "55 Pada Madya"
+  51: "56 Purwa Pada"
+  52: "57 Murda Na"
+  53: "58 Murda Ka"
+  54: "59 Murda Ta"
+  55: "6 Da"
+  56: "60 Murda Sa"
+  57: "61 Murda Pa"
+  58: "63 Murda Ga"
+  59: "64 Murda Ba"
+  60: "67 Pasangan Murda Ga"
+  61: "7 Ta"
+  62: "71 Pasangan Murda Ta"
+  63: "73 Rekan Kha"
+  64: "76 Rekan Za"
+  65: "8 Sa"
+  66: "81 Pasangan Murda Za"
+  67: "83 Swara A"
+  68: "84 Swara E"
+  69: "85 Swara U"
+  70: "86 Swara I"
+  71: "9 Wa"
+  72: "95 Mahaprana Sha"
+  73: "97 Cakra Keret"
